--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,5 @@
   "pasteImage.path": "${projectRoot}/attachments",
   "pasteImage.showFilePathConfirmInputBox": true,
   "prettier.singleQuote": false,
-  "gitdoc.enabled": false,
+  "gitdoc.enabled": true,
 }
